--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
       </div>
 
       <div class="calculator__operations">
-        <button class="bnt_calculator" onclick="displayOperators('+')">
+        <button class="bnt_calculator btn_signs" onclick="displayOperators('+')">
           +
         </button>
-        <button class="bnt_calculator" onclick="displayOperators('-')">
+        <button class="bnt_calculator btn_signs" onclick="displayOperators('-')">
           -
         </button>
-        <button class="bnt_calculator" onclick="displayOperators('*')">
+        <button class="bnt_calculator btn_signs" onclick="displayOperators('*')">
           x
         </button>
-        <button class="bnt_calculator" onclick="displayOperators('/')">
+        <button class="bnt_calculator btn_signs" onclick="displayOperators('/')">
           ÷
         </button>
       </div>
 
       <div class="calculator__clear">
-        <button class="bnt_calculator">C</button>
+        <button onclick="resetear()" class="bnt_calculator btn_signs">C</button>
       </div>
 
       <div class="calculator__result">
-        <button class="bnt_calculator" onclick="calcular()">=</button>
+        <button class="bnt_calculator btn_result" onclick="calcular()">=</button>
       </div>
 
       <script src="script.js"></script>
